--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="no_results_found_for_this_query">No Results Found For This Query</string>
     <string name="results_could_not_be_loaded">Results Could not be loaded</string>
     <string name="search">Search</string>
+    <string name="this_is_description">This Is Description</string>
+    <string name="photo_by">Photo By</string>
+    <string name="full_image">Full Image</string>
 </resources>
